deployments/allow-kafka-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-access
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      app: kafka
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: stats
      ports:
        - protocol: TCP
          port: 9092
